fixed bottom of general rules visually overflowing

--- a/beacon.css
+++ b/beacon.css
@@ -326,10 +326,9 @@ main.sheet-npc {
 main.sheet-gen {
     display: grid;
     width: 1000px;
-    height:900px;
     grid-gap: 4px;
     grid-template-columns: 200px 1fr 1fr 1fr 1fr;
-    grid-template-rows: 100px 1fr 1fr 1fr 20px;
+    grid-template-rows: 100px 1fr 1fr 20px;
     grid-template-areas: "header    header      header      header  header"
                          "gen-misc  reactions   reactions   surge   surge"
                          "phase     rerolltable rerolltable wounds  wounds";}
